<resources>
    <string name="app_name">GFWHelper</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_server">Server IP4 Address</string>
    <string name="pref_default_server">127.0.0.1</string>
    <string name="pref_title_server_port">Server Port</string>
    <string name="pref_default_server_port">10001</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_default_passward">1234567890</string>
    <string name="pref_title_proxy_port">Proxy Port</string>
    <string name="pref_default_proxy_port">3128</string>
    <string name="pref_title_switch">GFW Proxy Switch</string>


</resources>
